--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/node": "^8.2.5",
     "@astrojs/react": "^3.1.1",
     "@astrojs/tailwind": "^5.1.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -18,14 +19,22 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
+    "@types/xml2js": "0.4.11",
     "astro": "^4.5.16",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "events": "^3.3.0",
+    "loader-utils": "^3.2.1",
     "lucide-react": "^0.365.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rss-parser": "^3.12.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.4",
+    "url": "^0.11.3",
+    "xml2js": "0.4.23"
   }
 }
